--- a/gb/7/5/18/n1714479.md
+++ b/gb/7/5/18/n1714479.md
@@ -1,50 +1,74 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/boyqsg391/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/boyqsg391/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/boyqsg391/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/boyqsg391/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>日枪击案 警匪对峙29小时后自首</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元5月18日报导】（中央社记者杨明珠东京十八日专电）日本爱知县一名前黑道份子昨天在自己家中开枪，造成两名警官死伤、他的一对子女受伤。日本时间直到今天下午一时三十分，歹徒仍挟持他的前妻做为人质，负隅顽抗。 最后警匪在对峙超过29小时后，前妻逃脱，歹徒自首并被逮捕。</p> <p>这是日本警方机动部队（类似霹雳小组）自成立以来首度有干员遭歹徒击毙。</p> <p>今天上午，日本政府发言人内阁官房长官盐崎恭久在例行记者会上，针对爱知县枪击事件表示，他绝不容忍危害市民平静生活的枪击犯罪事件，这一 <br /><span class=bn12></span></div> <p></p> <div style="line-height:90%;text-align:center"> <br /><span class=bn12></span></div> <p></p> <div style="line-height:90%;text-align:center"> <br /><span class=bn12></span></div> <p></p> <div style="line-height:90%;text-align:center"> <br /><span class=bn12></span></div> <p></p> <div style="line-height:90%;text-align:center"> <br /><span class=bn12></span></div> <p></p> 	
+	<p>【大纪元5月18日报导】（中央社记者杨明珠东京十八日专电）日本爱知县一名前黑道份子昨天在自己家中开枪，造成两名警官死伤、他的一对子女受伤。日本时间直到今天下午一时三十分，歹徒仍挟持他的前妻做为人质，负隅顽抗。 最后警匪在对峙超过29小时后，前妻逃脱，歹徒自首并被逮捕。</p>
+<p>这是日本警方机动部队（类似霹雳小组）自成立以来首度有干员遭歹徒击毙。</p>
+<p>今天上午，日本政府发言人内阁官房长官盐崎恭久在例行记者会上，针对爱知县枪击事件表示，他绝不容忍危害市民平静生活的枪击犯罪事件，这一<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB%E6%A1%88.md#1">枪击案</a>件令人感到强烈的愤怒。他也对于遭歹徒枪杀身亡的二十三岁机动部队干员林一步的死亡，表示十分沈痛。</p>
+<p>负责枪炮管制的内阁府特命大臣高市早苗上午表示，政府将进一步检讨是否加强管制枪炮刀械，订定更严格的罚则。</p>
+<p>这起枪击事件发生在爱知县长久手町的一户民宅，歹徒是曾遭黑道组织山口组逐出门户的大林久人，他从昨天傍晚四时左右至今，仍持续持枪挟持他的前妻&#8211;五十岁的森三智子，与警方对峙中。</p>
+<p>警方研判，歹徒可能是与这位同居的前妻有家庭纠纷。</p>
+<p>国营电视台“日本放送协会”报导，今天清晨警方让歹徒的次女大林里纱致电她的母亲森三智子，据研判她并没有受伤。大林里纱也通过电话规劝父亲弃械，但未被接受。不过，据说歹徒的情绪要比昨天平稳一些。</p>
+<p>爱知县警方目前在县警察总部成立五十人的专案小组，并在案发现场成立一百七十人编制的现场专案小组。枪案发生的民宅方圆之外三百公尺已被列为禁区。大阪府警方的特种警车也赶至现场增援。 </p>
+<p>这起<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB%E6%A1%88.md#1">枪击案</a>共造成一死三伤。昨天案发后，接获通报赶至现场的警员是五十四岁的爱知县长久手町派出所巡察部长木本明史。歹徒当着木本的面，先朝自己二十五岁的长男大林健人的腹部及二十一岁的次女大林里纱的大腿开枪；</p>
+<p>之后，他吆喝木本明史跪下、卸下头盔道歉求饶。没想到，他仍对本木的脖子开枪，本木就倒在民宅玄关前；在拖延了五个小时后，才被救出送医，伤势严重。</p>
+<p>在救木本的时候，为准备展开攻坚，在马路上伺机埋伏的机动部队巡查部长林一步遭歹徒开枪，防弹衣未掩盖的左肩锁骨遭子弹贯穿，伤及肺部，送医不治成为日本机动部队成立以来，第一位因公殉职的干员。</p>
+<p>由于事件仍呈胶着状态，长久手町教育委员会今天上午下令当地的七所国中、小学停课。另外，枪击现场附近的大学也宣布停课。</p>
+<p>18日晚间，被歹徒当作人质的前妻以去洗手间为借口而逃脱，最后歹徒在警察劝说下，自首并被逮捕。</p>
+<p><B>图片说明：2007年5月17日，日本爱知县发生枪击案，一持枪歹徒疑因家庭纠纷，挟持前妻与警方对峙中。枪案发生现场的民宅方圆之外三百公尺已被列为禁区。由此枪击事件目前呈胶着状态，当局下令当地学校停课。（STR/AFP/Getty Images) </B></p>
+<p><div style="line-height:90%;text-align:center"> <br /><span class=bn12></span></div>
+<p></p>
+<div style="line-height:90%;text-align:center"> <br /><span class=bn12></span></div>
+<p></p>
+<div style="line-height:90%;text-align:center"> <br /><span class=bn12></span></div>
+<p></p>
+<div style="line-height:90%;text-align:center"> <br /><span class=bn12></span></div>
+<p></p>
+<div style="line-height:90%;text-align:center"> <br /><span class=bn12></span></div>
+<p></p>
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/7/5/9/n1704942.md#1">悉尼再现枪击事件三人受伤</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/7/5/9/n1705015.md#1">张锦华：台湾电视新闻改革的契机</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/7/5/10/n1705688.md#1">加州弗市大学枪击案 校方反应迅速</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/7/5/10/n1705764.md#1">维州理工枪击案：模范少数族裔形象终结？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/5/9/n1704942.md#1">悉尼再现枪击事件三人受伤</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/5/9/n1705015.md#1">张锦华：台湾电视新闻改革的契机</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/5/10/n1705688.md#1">加州弗市大学枪击案 校方反应迅速</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/5/10/n1705764.md#1">维州理工枪击案：模范少数族裔形象终结？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/boyqsg391/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/3/n11022591.md#1" target="_blank">玉清心：物理大师束星北 一曲悲怆的挽歌</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10487846.md#1" target="_blank">功夫·寻道——武术大师李有甫的故事</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308535.md#1" target="_blank">金雁：“既得利益者”何以成为反对苏维埃的先锋?</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/5/n11633708.md#1" target="_blank">华东师范大学法轮功学员的20年</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/20/12/30/n12654624.md#1">【命理】如何看大运 为何前后半生两重天？</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/5/n12791244.md#1">在德州看到UFO 美国球星：几乎100%确定</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/7/n12794550.md#1">遥视月球 特异功能者惊出冷汗</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/5/n12792526.md#1">【未解之谜】外星人引发的绝密“泽塔行动”</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/2/27/n12778977.md#1">为何革命？孙中山在桂林的一段往事</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/11/n12803277.md#1">【有冇搞错】两会闹哄哄 习近平要接管国务院</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12803091.md#1">【秦鹏直播】习近平称全军备战 在恐吓谁？</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12803058.md#1">【远见快评】美中会谈拜登中计？揭共军台海战术</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/9/n12800602.md#1">【新闻看点】习一石三鸟？李克强架空 韩正有风险</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12801759.md#1">侯佩岑携母提黑历史赚钱 蔡诗萍分析为何众怒</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12802899.md#1">布林肯见杨洁篪谈什么 美方公布五话题</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12801759.md#1">侯佩岑携母提黑历史赚钱 蔡诗萍分析为何众怒</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/8/n12797749.md#1">病愈后复出拍戏 69岁洪金宝叹香港无望</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/9/n12798378.md#1">刘德华片酬数字曝光 与大陆00后女星持平</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/9/n12800458.md#1">叹“再见了熟悉的陌生人”范冰冰疑喊话李晨</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12802687.md#1">刘诗诗晒自拍照庆生 吴奇隆别样秀恩爱</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/5/n12792139.md#1">水果害你胖？5种水果越吃越瘦 吃对时间很重要</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12801372.md#1">如何因应僵尸攻击？ 美国CDC告诉你</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12801040.md#1">湖北动物园标示“狼在此” 笼子里却是小狗</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/9/n12799710.md#1">脂肪容易往肚子囤　２种动作边看电视边瘦小腹</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12801991.md#1">【影片】疫情能否终结 接下来3个月是关键？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/boyqsg391/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/boyqsg391/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/7/5/18/n1714479.htm">日枪击案 警匪对峙29小时后自首</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/7/5/18/n1714479.htm">日枪击案 警匪对峙29小时后自首</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/boyqsg391/djy/blob/master/gb/7/5/18/n1714479.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/boyqsg391/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/boyqsg391/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/boyqsg391/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/7/5/18/n1714479.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
